<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mobi.glowworm.journal.ui.signin.SignInActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/layout_branding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:clickable="true"
        android:foreground="?selectableItemBackground"
        app:cardBackgroundColor="@color/backgroundCard"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:layout_constraintBottom_toTopOf="@+id/btn_signin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="KeyboardInaccessibleWidget">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/m32"
            android:paddingRight="@dimen/m32">


            <TextView
                style="@style/TextAppearance.AppCompat.Display3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/m8"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textStyle="bold"/>


            <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/m32"
                android:paddingRight="@dimen/m32"
                android:text="@string/title_signin_branding"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:contentDescription="@string/content_signin_branding"
                app:srcCompat="@drawable/logo_main"/>

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:lineSpacingMultiplier="1.25"
                android:text="@string/desc_signin_branding"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <com.firebase.ui.auth.util.ui.SupportVectorDrawablesButton
        android:id="@+id/btn_signin"
        style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:paddingEnd="@dimen/m64"
        android:paddingRight="@dimen/m64"
        android:text="@string/fui_sign_in_with_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry"/>


</android.support.constraint.ConstraintLayout>
